[gd_scene load_steps=29 format=2]

[ext_resource path="res://objects/upgradeSystem/UpgradeHandler.gd" type="Script" id=1]
[ext_resource path="res://ui/Upgrade_Button/ButtonNode2d.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/upgrades/abstract_upgrades/HpUpUpgrade.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/upgrades/abstract_upgrades/AttackPoisonUpgrade.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/upgrades/abstract_upgrades/AttackFireUpgrade.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/upgrades/abstract_upgrades/WallRicochetUpgrade.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/upgrades/abstract_upgrades/AttackPlusUpgrade.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/upgrades/abstract_upgrades/EnemyRicochetUpgrade.tscn" type="PackedScene" id=8]
[ext_resource path="res://objects/upgrades/abstract_upgrades/SpeedPlusUpgrade.tscn" type="PackedScene" id=9]
[ext_resource path="res://objects/upgrades/abstract_upgrades/WeakPointUpgrade.tscn" type="PackedScene" id=10]
[ext_resource path="res://objects/upgrades/abstract_upgrades/DiagonalShootsUpgrade.tscn" type="PackedScene" id=11]
[ext_resource path="res://objects/upgrades/abstract_upgrades/LifeStealUpgrade.tscn" type="PackedScene" id=12]
[ext_resource path="res://objects/upgrades/abstract_upgrades/AttackSpeedPlusUpgrade.tscn" type="PackedScene" id=13]
[ext_resource path="res://objects/upgrades/abstract_upgrades/AfterMoveUpgrade.tscn" type="PackedScene" id=14]
[ext_resource path="res://objects/upgrades/abstract_upgrades/10FirstSecondsAttackPlusUpgrade.tscn" type="PackedScene" id=15]
[ext_resource path="res://objects/upgrades/abstract_upgrades/OfenseIsTheBestDefenseUpgrade.tscn" type="PackedScene" id=16]
[ext_resource path="res://objects/upgrades/abstract_upgrades/DangerousGameUpgrade.tscn" type="PackedScene" id=17]
[ext_resource path="res://objects/upgrades/abstract_upgrades/DieHardUpgrade.tscn" type="PackedScene" id=18]
[ext_resource path="res://objects/upgrades/abstract_upgrades/CatastrophicMoraleUpgrade.tscn" type="PackedScene" id=19]
[ext_resource path="res://objects/upgrades/abstract_upgrades/AgressiveEnduranceUpgrade.tscn" type="PackedScene" id=20]
[ext_resource path="res://objects/upgrades/abstract_upgrades/CriticalPlusUpgrade.tscn" type="PackedScene" id=21]
[ext_resource path="res://objects/upgrades/abstract_upgrades/ElementalChancePlusUpgrade.tscn" type="PackedScene" id=22]
[ext_resource path="res://objects/upgrades/abstract_upgrades/RepairsUpgrade.tscn" type="PackedScene" id=23]
[ext_resource path="res://objects/upgrades/abstract_upgrades/AfterMoveElementalUpgrade.tscn" type="PackedScene" id=24]
[ext_resource path="res://objects/upgrades/abstract_upgrades/AfterMoveCriticalUpgrade.tscn" type="PackedScene" id=25]
[ext_resource path="res://objects/upgrades/abstract_upgrades/HopeUpgrade.tscn" type="PackedScene" id=26]
[ext_resource path="res://objects/upgradeSystem/ButtonsHBoxContainer.gd" type="Script" id=27]

[sub_resource type="Animation" id=2]
resource_name = "Show Cards"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/ButtonsHBoxContainer/ButtonRight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 540, 309 ), Vector2( 889.733, 309 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect/ButtonsHBoxContainer/ButtonLeft:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 540, 309 ), Vector2( 169.263, 309 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("ColorRect/ButtonsHBoxContainer/ButtonMiddle/Button")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "grab_focus"
} ]
}

[node name="Upgrade_Handler" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 779.741 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1080.0
margin_bottom = 1920.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsHBoxContainer" type="HBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 474.0
margin_right = -7.0
margin_bottom = 476.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 7
size_flags_vertical = 7
custom_constants/separation = 0
alignment = 1
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLeft" parent="ColorRect/ButtonsHBoxContainer" instance=ExtResource( 2 )]
position = Vector2( 169.263, 309 )

[node name="Button" parent="ColorRect/ButtonsHBoxContainer/ButtonLeft" index="0"]
focus_neighbour_left = NodePath("../../ButtonRight/Button")
focus_neighbour_right = NodePath("../../ButtonMiddle/Button")

[node name="ButtonRight" parent="ColorRect/ButtonsHBoxContainer" instance=ExtResource( 2 )]
position = Vector2( 889.733, 309 )

[node name="Button" parent="ColorRect/ButtonsHBoxContainer/ButtonRight" index="0"]
focus_neighbour_left = NodePath("../../ButtonMiddle/Button")
focus_neighbour_right = NodePath("../../ButtonLeft/Button")

[node name="ButtonMiddle" parent="ColorRect/ButtonsHBoxContainer" instance=ExtResource( 2 )]
position = Vector2( 527, 308 )

[node name="Button" parent="ColorRect/ButtonsHBoxContainer/ButtonMiddle" index="0"]
focus_neighbour_left = NodePath("../../ButtonLeft/Button")
focus_neighbour_right = NodePath("../../ButtonRight/Button")

[node name="UpgradeContainer" type="Node2D" parent="."]

[node name="UnsortedContainer" type="Node" parent="UpgradeContainer"]

[node name="AttackPoisonUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 4 )]

[node name="DiagonalShootsUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 11 )]

[node name="WallRicochetUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 6 )]

[node name="AttackPlusUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 7 )]

[node name="AttackFireUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 5 )]

[node name="EnemyRicochetUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 8 )]

[node name="SpeedPlusUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 9 )]

[node name="HpUpUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 3 )]

[node name="AfterMoveUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 14 )]

[node name="10FirstSecondsAttackPusUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 15 )]

[node name="OfenseIsTheBestDefenseUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 16 )]

[node name="DangerousGameUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 17 )]

[node name="DieHard" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 18 )]

[node name="CatastrophicMoraleUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 19 )]

[node name="AgressiveEnduranceUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 20 )]

[node name="CriticalPlusUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 21 )]

[node name="ElementalChancePlusUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 22 )]

[node name="AttackSpeedUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 13 )]

[node name="LifeStealUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 12 )]

[node name="RepairsUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 23 )]
unique_type = 0

[node name="AfterMoveElementalUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 24 )]

[node name="AfterMoveCriticalUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 25 )]

[node name="HopeUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 26 )]

[node name="WeakPointUpgrade" parent="UpgradeContainer/UnsortedContainer" instance=ExtResource( 10 )]

[node name="UpgradesActive" type="Node" parent="UpgradeContainer"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Show Cards" = SubResource( 2 )

[editable path="ColorRect/ButtonsHBoxContainer/ButtonLeft"]
[editable path="ColorRect/ButtonsHBoxContainer/ButtonLeft/Button"]
[editable path="ColorRect/ButtonsHBoxContainer/ButtonRight"]
[editable path="ColorRect/ButtonsHBoxContainer/ButtonRight/Button"]
[editable path="ColorRect/ButtonsHBoxContainer/ButtonMiddle"]
[editable path="ColorRect/ButtonsHBoxContainer/ButtonMiddle/Button"]
